# lojaVirtual

./: .gitignore  CMakeLists.txt  Catalogo.java  LojaVisao.java  Pedido.java  Produto.java  README.md  replit.nix
.ccls-cache/@@home@runner@LojaVirtual/: @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@backward@auto_ptr.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@backward@binders.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bit.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@align.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@alloc_traits.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@allocated_ptr.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@allocator.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@atomic_base.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@atomic_lockfree_defines.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@basic_ios.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@basic_ios.tcc.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@basic_string.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@basic_string.tcc.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@char_traits.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@charconv.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@concept_check.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@cpp_type_traits.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@cxxabi_forced.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@cxxabi_init_exception.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@exception.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@exception_defines.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@exception_ptr.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@functexcept.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@functional_hash.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@hash_bytes.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@invoke.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@ios_base.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@istream.tcc.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@locale_classes.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@locale_classes.tcc.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@locale_facets.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@locale_facets.tcc.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@localefwd.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@memoryfwd.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@move.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@nested_exception.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@new_allocator.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@ostream.tcc.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@ostream_insert.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@bits@postypes.h.blob  (+163 more)
.ccls-cache/@home@runner@LojaVirtual/: include@Catalogo.h  include@Catalogo.h.blob  include@Pedido.h  include@Pedido.h.blob  include@Produto.h  include@Produto.h.blob  main.cpp.blob  src@Catalogo.cpp  src@Catalogo.cpp.blob  src@Pedido.cpp  (+12 more)
src/: CMakeLists.txt  Pedido.cpp  main.cpp
tests/: CMakeLists.txt  resultado.txt  test_integracao.cpp  test_produto.cpp
